refactor: remove the extra --add-exports
Thanks to the work in https://github.com/sourcegraph/scip-java/pull/618 these
are no longer necessary!